// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCourseDetailsPageComponent should snap with a course with one co-owner and no students, and populated course student list 1`] = `
<tm-instructor-course-details-page
  clipboardService={[Function ClipboardService]}
  courseDetails={[Function Object]}
  courseService={[Function CourseService]}
  courseStudentListAsCsv={[Function String]}
  instructorService={[Function InstructorService]}
  instructors={[Function Array]}
  isAjaxForCsvSuccess={[Function Boolean]}
  isLoadingCsv={[Function Boolean]}
  isStudentsLoading={[Function Boolean]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  students={[Function Array]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-course-details-page>
`;

exports[`InstructorCourseDetailsPageComponent should snap with a course with one co-owner and one student, and ajax failure 1`] = `
<tm-instructor-course-details-page
  clipboardService={[Function ClipboardService]}
  courseDetails={[Function Object]}
  courseService={[Function CourseService]}
  courseStudentListAsCsv=""
  instructorService={[Function InstructorService]}
  instructors={[Function Array]}
  isAjaxForCsvSuccess="false"
  isLoadingCsv="false"
  isStudentsLoading={[Function Boolean]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  students={[Function Array]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-course-details-page>
`;

exports[`InstructorCourseDetailsPageComponent should snap with default fields 1`] = `
<tm-instructor-course-details-page
  clipboardService={[Function ClipboardService]}
  courseDetails={[Function Object]}
  courseService={[Function CourseService]}
  courseStudentListAsCsv=""
  instructorService={[Function InstructorService]}
  instructors={[Function Array]}
  isAjaxForCsvSuccess={[Function Boolean]}
  isLoadingCsv="false"
  isStudentsLoading={[Function Boolean]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  students={[Function Array]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-instructor-course-details-page>
`;
